Add new component & update pastel form

--- a/web-app/src/app/home/home.component.html
+++ b/web-app/src/app/home/home.component.html
@@ -23,17 +23,11 @@
         </mat-grid-tile>
       </mat-grid-list>
     </mat-tab>
-    <mat-tab label="Délibérations">
-          <mat-card class="card">
-            <mat-card-header class="title">
-              <mat-card-title>Publication des délibérations</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
+    <mat-tab label="Nouveau document">
               <app-pastell-form></app-pastell-form>
-            </mat-card-content>
-            <mat-card-actions>
-            </mat-card-actions>
-          </mat-card>
+    </mat-tab>
+    <mat-tab label="Documents">
+      <app-documents-list></app-documents-list>
     </mat-tab>
   </mat-tab-group>
 
