--- a/web-app/src/app/pastell-form/pastell-form.component.css
+++ b/web-app/src/app/pastell-form/pastell-form.component.css
@@ -4,6 +4,7 @@
 
   .mat-form-field {
     margin-top: 16px;
+    padding: 10px;
   }
 
   .file-input {
@@ -13,4 +14,15 @@
   .file-upload {
     padding-top: 20px;
    padding-bottom: 20px;
+  }
+
+  /*mat-form-field {
+    width: 100%;
+  }*/
+
+  .custom-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
