--- a/web-app/src/app/pastell-form/pastell-form.component.html
+++ b/web-app/src/app/pastell-form/pastell-form.component.html
@@ -1,19 +1,29 @@
-<mat-grid-list cols="10" rowHeight="350px">
-    <mat-grid-tile colspan="7">
-    <mat-stepper orientation="vertical" [linear]="isLinear" #stepper>
+    <div class="container">
+    <mat-stepper orientation="horizontal" [linear]="isLinear" #stepper>
       <form [formGroup]="pastelForm">
       <mat-step [stepControl]="firstFormGroup">
-        <form [formGroup]="firstFormGroup" (ngSubmit)="part1()">
-          <ng-template matStepLabel>Nom du document</ng-template>
-          <mat-form-field appearance="fill">
-            <mat-label>Nom</mat-label>
-            <input matInput placeholder="Nom du document" formControlName="firstCtrl" required >
-          </mat-form-field>
-          <div>
-            <button mat-button type="submit">Submit</button>
-            <button mat-button matStepperNext>Suivant</button>
-          </div>
-        </form>
+        <div class="custom-center">
+          <form [formGroup]="firstFormGroup" (ngSubmit)="part1()">
+            <ng-template matStepLabel>Nom du document</ng-template>
+            <mat-form-field appearance="outline">
+              <mat-label>Nom</mat-label>
+              <input matInput placeholder="Nom du document" formControlName="firstCtrl" required >
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Numéro de l'acte</mat-label>
+              <input matInput placeholder="Numéro d'acte" formControlName="numero_acte" required pattern="[A-Z0-9_]{4,12}">
+
+
+
+
+
+            </mat-form-field>
+            <div>
+              <button mat-button type="submit">Submit</button>
+              <button mat-button matStepperNext>Suivant</button>
+            </div>
+          </form>
+        </div>
       </mat-step>
       <mat-step [stepControl]="secondFormGroup">
         <form [formGroup]="secondFormGroup" enctype = "multipart/form-data">
@@ -30,12 +40,63 @@
                 {{this.secondCtrl.value || "Pas encore de fichier ajouté."}}
             </div>
 
+
           <!--</mat-form-field>-->
           <div>
             <button mat-button matStepperPrevious>Précédent</button>
             <button mat-button matStepperNext>Suivant</button>
           </div>
         </form>
+      </mat-step>
+      <mat-step [stepControl]="details">
+        <div class="custom-center">
+          <form [formGroup]="details" (ngSubmit)="part2()">
+            <!--<div class="form-group">-->
+            <ng-template matStepLabel>Détails</ng-template>
+            <mat-form-field appearance="outline">
+              <mat-label>Classification</mat-label>
+              <mat-select
+                  formControlName="classification"
+                  class="form-select"
+                  id="classification">
+                  <mat-option *ngFor="let classification of classifications"
+                          [value]="classification">
+                    {{classification}}
+                  </mat-option>
+            </mat-select>
+            </mat-form-field>
+          <!--</div>-->
+          <!--<div class="form-group">-->
+            <mat-form-field appearance="outline">
+
+              <!--<mat-label>Date</mat-label>-->
+              <input matInput formControlName="date" [matDatepicker]="picker">
+              <mat-hint>YYYY-MM-DD</mat-hint>
+              <mat-datepicker-toggle matSuffix [for]="picker">
+                <mat-icon matDatepickerToggleIcon>
+                  calendar_month
+                </mat-icon>
+              </mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+
+            </mat-form-field>
+
+            <div class="form-group">
+                <mat-checkbox formControlName="opendata">Publication opendata</mat-checkbox>
+
+
+            </div>
+
+          <!--</div>-->
+
+
+
+            <div>
+              <button mat-button type="submit">Submit</button>
+              <button mat-button matStepperNext>Suivant</button>
+            </div>
+          </form>
+        </div>
       </mat-step>
       <mat-step>
         <ng-template matStepLabel>Publié</ng-template>
@@ -47,8 +108,7 @@
       </mat-step>
       </form>
     </mat-stepper>
-    </mat-grid-tile>
-    <mat-grid-tile colspan="3">
-    <pre>{{pastelForm.value | json}}</pre>
-  </mat-grid-tile>
+    <!--<pre>{{pastelForm.value | json}}</pre>-->
+</div>
+
 
