--- a/web-app/src/app/home/home.component.html
+++ b/web-app/src/app/home/home.component.html
@@ -1,9 +1,4 @@
-<mat-toolbar color="primary">
-    <span>{{user}}</span>
-    <button mat-button (click)="logout($event)">LOGOUT</button>
-  </mat-toolbar>
-
-  <mat-tab-group mat-align-tabs="center" dynamicHeight>
+<!--<mat-tab-group mat-align-tabs="center" dynamicHeight>
     <mat-tab label="Accueil">
       <mat-grid-list cols="4">
         <mat-grid-tile rowHeight='200px'>
@@ -29,5 +24,8 @@
     <mat-tab label="Documents">
       <app-documents-list></app-documents-list>
     </mat-tab>
-  </mat-tab-group>
+  </mat-tab-group>-->
+  <!--<app-navbar></app-navbar>-->
+
+
 
