Fix connexion bug

--- a/web-app/src/app/navbar/navbar.component.html
+++ b/web-app/src/app/navbar/navbar.component.html
@@ -18,7 +18,7 @@
           <span>Accueil</span>
         </button>
         <button mat-menu-item (click)="openInfosDialog()">
-          <mat-icon>voicemail</mat-icon>
+          <mat-icon>info</mat-icon>
           <span>infos</span>
         </button>
         <button mat-menu-item  (click)="logout($event)">
