--- a/web-app/src/app/navbar/dialog-infos.html
+++ b/web-app/src/app/navbar/dialog-infos.html
@@ -1,5 +1,15 @@
-<h1 mat-dialog-title>Dialog with elements</h1>
-<div mat-dialog-content>This dialog showcases the title, close, content and actions elements.</div>
+<h1 mat-dialog-title>Informations</h1>
+<div mat-dialog-content>
+  Version utilisée de Pastell:
+  <ul>
+    <li>
+      {{data.version}}
+    </li>
+    <li>
+      preprod
+    </li>
+  </ul>
+</div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
+  <button mat-button mat-dialog-close>Fermer</button>
 </div>
