--- a/web-app/src/app/components/pastell-form.component.html
+++ b/web-app/src/app/components/pastell-form.component.html
@@ -1,22 +1,30 @@
     <div class="container">
+      <div class="custom-center">
+      <mat-stepper orientation="vertical" linear="true" #stepper>
       <form [formGroup]="pastelForm">
+        <mat-step [stepControl]="firstFormGroup">
         <div class="custom-center">
+
           <form [formGroup]="firstFormGroup" (ngSubmit)="part1()">
-            <ng-template matStepLabel>Nom du document</ng-template>
+            <ng-template matStepLabel>Description du document</ng-template>
+            <input hidden formControlName="idDoc" >
             <mat-form-field appearance="outline">
-              <mat-label>Nom</mat-label>
-              <input matInput placeholder="Nom du document" formControlName="firstCtrl" required >
+              <mat-label>Objet</mat-label>
+              <input matInput placeholder="Objet du document" formControlName="firstCtrl" required >
             </mat-form-field>
             <mat-form-field appearance="outline">
               <mat-label>Numéro de l'acte</mat-label>
               <input matInput placeholder="Numéro d'acte" formControlName="numero_acte" required pattern="[A-Z0-9_]{4,12}">
             </mat-form-field>
             <div>
-              <button mat-button type="submit">Submit</button>
+              <!--<button mat-button type="submit">Submit</button>-->
+              <button mat-button matStepperNext>Suivant</button>
             </div>
           </form>
         </div>
 
+      </mat-step>
+      <mat-step [stepControl]="secondFormGroup">
         <form [formGroup]="secondFormGroup" enctype = "multipart/form-data">
           <div class="custom-center">
           <ng-template matStepLabel>Fichiers associés</ng-template>
@@ -28,7 +36,7 @@
                   (click)="fileUpload.click()">
                     <mat-icon>attach_file</mat-icon>
                 </button>
-                <mat-icon class="megalis right">picture_as_pdf</mat-icon>{{this.secondCtrl.value.split('\\')[2] || "Pas encore de fichier ajouté."}}
+                <mat-icon class="megalis right">picture_as_pdf</mat-icon>{{this.secondCtrl.value?.split('\\')[2] || "Pas encore de fichier ajouté."}}
             </div>
 
 
@@ -37,8 +45,13 @@
 
           </div>
           </div>
+          <div>
+            <button mat-button matStepperPrevious>Précédent</button>
+            <button mat-button matStepperNext>Suivant</button>
+          </div>
         </form>
-
+      </mat-step>
+      <mat-step [stepControl]="details">
         <div class="custom-center">
           <form [formGroup]="details" (ngSubmit)="part2()">
             <!--<div class="form-group">-->
@@ -84,15 +97,24 @@
             <div>
 
             </div>
+            <div>
+              <button mat-button type="submit">Submit</button>
+              <button mat-button matStepperNext>Suivant</button>
+            </div>
           </form>
         </div>
-
+      </mat-step>
+      <mat-step>
+        <ng-template matStepLabel>Statut</ng-template>
+        <p>Publication réalisée avec succès !</p>
         <div>
-
+          <button mat-button (click)="stepper.reset()">Recommencer</button>
         </div>
+      </mat-step>
 
       </form>
-
+    </mat-stepper>
+      </div>
 </div>
 
 
