--- a/web-app/src/app/components/navbar.component.css
+++ b/web-app/src/app/components/navbar.component.css
@@ -4,7 +4,7 @@
 
   span.beta {
     padding-left: 10px;
-    background-color: orange;
+    background-color: #f44336;
     padding-right: 10px;
     font-size: smaller;
     line-height: 1.5;
