--- a/web-app/src/app/components/pastell-snack.component.html
+++ b/web-app/src/app/components/pastell-snack.component.html
@@ -1,6 +1,6 @@
 
 <div class="snackbar-container">
-Document <a href="{{data.link}}" target="_blank">{{data.message}}</a> créé avec succès
+Le document <a href="{{data.link}}" target="_blank">{{data.message}}</a> a été publié avec succès
   <div class="button-container">
     <button (click)="snackBarRef.dismiss()" mat-button mat-icon-button aria-label="Clear" >
         <mat-icon>close</mat-icon>
