--- a/web-app/src/app/components/dashboard.component.css
+++ b/web-app/src/app/components/dashboard.component.css
@@ -1,7 +1,6 @@
 .content {
-    padding: 16px;
+    padding-top: 80px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
-.content > mat-card {
-    margin-bottom: 16px;
-}
