--- a/web-app/src/app/components/dashboard.component.html
+++ b/web-app/src/app/components/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="16px grid">
       <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let card of items">
         <mat-card class="mat-elevation-z4" >
           <mat-card-header>
