--- a/web-app/src/app/components/navbar.component.css
+++ b/web-app/src/app/components/navbar.component.css
@@ -1,5 +1,10 @@
-.example-spacer {
+.toolbar-spacer {
     flex: 1 1 auto;
+  }
+
+  .top-toolbar {
+    position: fixed;
+    top:0;
   }
 
   span.beta {
