--- a/web-app/src/app/components/navbar.component.html
+++ b/web-app/src/app/components/navbar.component.html
@@ -1,10 +1,10 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="top-toolbar" color="primary">
     <button mat-icon-button class="example-icon" aria-label="" routerLink="">
       <mat-icon>extension</mat-icon>
     </button>
     <span>Proto</span>
     <span class="beta">beta</span>
-    <span class="example-spacer"></span>
+    <span class="toolbar-spacer"></span>
     <button mat-icon-button class="example-icon person-icon" aria-label="">
       <mat-icon>person</mat-icon>
     </button>
