--- a/web-app/src/app/components/no-tdt-form.component.css
+++ b/web-app/src/app/components/no-tdt-form.component.css
@@ -32,6 +32,10 @@
     padding-left: 15px;
   }
 
+  .upload-btn {
+    margin-left: 10px;
+}
+
   .status-card {
     max-width: 400px;
     margin-top: 3px;
@@ -58,7 +62,7 @@ mat-chip a {
   margin-right: 20px;
 }
 
-.example-spacer {
+.toolbar-spacer {
   flex: 1 1 auto;
 }
 
@@ -79,4 +83,5 @@ h4 {
 .example-margin {
   padding: 10px;
 }
+
 
