--- a/web-app/src/app/components/no-tdt-form.component.html
+++ b/web-app/src/app/components/no-tdt-form.component.html
@@ -1,11 +1,10 @@
     <div class="container">
+      <div *ngIf="!formEnabled">
       <h1>Publier un acte</h1>
       <h4>ne passant pas par le contrôle de légalité</h4>
+    </div>
       <div class="custom-center">
-        <!--<mat-card class="form-card" *ngIf="!formEnabled">
-          <p>Document publié avec succès</p>
-        </mat-card>-->
-      <mat-spinner *ngIf="waiting"></mat-spinner>
+      <mat-progress-bar color="accent" mode="query" *ngIf="waiting"></mat-progress-bar>
       <mat-card class="form-card" *ngIf="formEnabled">
         <mat-card-title>Nouvelle publication d'acte
           <mat-chip selected color="primary"><a [href]="pastellLink" target="_blank">{{idDoc}}</a></mat-chip>
@@ -14,7 +13,6 @@
       <form [formGroup]="pastelForm" (ngSubmit)="onFormSubmit()">
         <mat-card-content>
         <div class="custom-center">
-
           <form [formGroup]="firstFormGroup">
             <input formControlName="acte_nature" hidden>
             <mat-form-field appearance="outline">
@@ -43,9 +41,16 @@
                   </mat-option>
             </mat-select>
             </mat-form-field>
-
             <mat-form-field appearance="outline">
-              <!--<mat-label>Date</mat-label>-->
+              <mat-label>Classification</mat-label>
+              <mat-select formControlName="classification" class="form-select">
+                  <mat-option *ngFor="let item of classifications"
+                          [value]="item">
+                    {{item}}
+                  </mat-option>
+            </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
               <input matInput formControlName="date_de_lacte" [matDatepicker]="picker">
               <mat-hint>YYYY-MM-DD</mat-hint>
               <mat-datepicker-toggle matSuffix [for]="picker">
@@ -57,31 +62,29 @@
             </mat-form-field>
             <div class="form-group">
                 <mat-radio-group formControlName="publication_open_data">
-                  <mat-radio-button class="example-margin" value="3">Publié en opendata</mat-radio-button>
-                  <mat-radio-button class="example-margin" value="1">Ne sais pas</mat-radio-button>
+                  <mat-radio-button class="example-margin" value="3">Je publie en opendata</mat-radio-button>
+                  <mat-radio-button class="example-margin" value="1">Je ne sais pas</mat-radio-button>
                 </mat-radio-group>
             </div>
-
           </form>
         </div>
-
         <mat-divider></mat-divider>
 
         <form [formGroup]="secondFormGroup" enctype = "multipart/form-data">
-          <mat-grid-list class="grid-file" cols="6" rowHeight="100px">
-            <mat-grid-tile colspan="1">
-            <mat-label>Acte*</mat-label>
+          <mat-grid-list cols="6" rowHeight="100px">
+            <mat-grid-tile class="grid-file" colspan="1">
+            <mat-label>Acte *</mat-label>
             <input type="file" class="file-upload" name="arrete" class="file-input" formControlName="arrete" (change)="onNewFile($event)" required #fileUpload>
             <div class="file-upload">
                 <button mat-mini-fab color="primary" class="upload-btn" matTooltip="Ajouter un fichier"
                   (click)="fileUpload.click()">
                     <mat-icon>attach_file</mat-icon>
                 </button>
-                <!--<mat-icon class="megalis right">picture_as_pdf</mat-icon>{{this.arrete.value?.split('\\')[2] || "Pas encore de fichier ajouté."}}-->
             </div>
             </mat-grid-tile>
             <mat-grid-tile colspan="5">
-            <mat-chip-list class="mat-chip-list-stacked" #chipList aria-label="Acte">
+              <mat-spinner color="accent" diameter="40" *ngIf="waiting_file" ></mat-spinner>
+            <mat-chip-list class="mat-chip-list-stacked2" #chipList aria-label="Acte">
               <mat-chip selected color="primary" *ngFor="let file of fileActe" (removed)="removeFile(file)">
                 {{file.name}}
                 <button matChipRemove matTooltip="Supprimer ce fichier">
@@ -91,9 +94,10 @@
             </mat-chip-list>
           </mat-grid-tile>
           </mat-grid-list>
-            <mat-divider></mat-divider>
-        <mat-grid-list cols="6" class="grid-file">
-          <mat-grid-tile colspan="1">
+
+        <mat-grid-list cols="6" class="grid-file" *ngIf="annexesEnabled">
+          <mat-divider></mat-divider>
+          <mat-grid-tile class="grid-file" colspan="1">
             <mat-label>Annexes</mat-label>
             <input type="file" multiple class="file-upload" name="autre_document_attache" class="file-input" formControlName="autre_document_attache" (change)="onNewFile($event)" #fileUpload2>
             <div class="file-upload">
@@ -101,7 +105,6 @@
                   (click)="fileUpload2.click()">
                     <mat-icon>attach_file</mat-icon>
                 </button>
-                <!--<mat-icon class="megalis right">picture_as_pdf</mat-icon>{{this.autre_document_attache.value?.split('\\')[2] || "Pas encore d'annexe ajoutée."}}-->
             </div>
           </mat-grid-tile>
           <mat-grid-tile colspan="5">
@@ -116,14 +119,7 @@
           </mat-grid-tile>
         </mat-grid-list>
 
-
-
-
-
         </form>
-
-
-
 
       </mat-card-content>
       <mat-divider inset></mat-divider>
@@ -146,15 +142,17 @@
     </mat-card>
       </div>
 
-
       <mat-toolbar class="bottom-toolbar">
         <button matTooltip="Publier un nouveau document" matTooltipPosition="above" *ngIf="!formEnabled" mat-fab color="primary" aria-label="Publier un nouvel acte" (click)="newActe()">
           <mat-icon>edit</mat-icon>
         </button>
-        <button matTooltip="Supprimer le document courant" matTooltipPosition2="above" *ngIf="formEnabled" mat-fab color="warn" aria-label="Supprimer" (click)="deleteActe(idDoc)">
+        <button matTooltip="Supprimer le document courant" matTooltipPosition="above" *ngIf="formEnabled" mat-fab color="warn" aria-label="Supprimer" (click)="deleteActe(idDoc)">
           <mat-icon>delete</mat-icon>
         </button>
-        <!--<span class="example-spacer"></span>-->
+        <span class="toolbar-spacer"></span>
+        <button matTooltip="Revenir à l'accueil" matTooltipPosition="above" aria-label="Revenir à l'accueil" mat-icon-button routerLink="">
+          <mat-icon>dashboard</mat-icon>
+        </button>
 
       </mat-toolbar>
 
