--- a/web-app/src/styles.css
+++ b/web-app/src/styles.css
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.container {
+    padding-top: 60px;
+    padding-bottom: 100px;
+}
+
+.grid-file>.mat-grid-tile-content {
+    justify-content: start;
+  }
