--- a/web-app/src/app/components/navbar.component.html
+++ b/web-app/src/app/components/navbar.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar class="top-toolbar" color="primary">
-    <button mat-icon-button class="example-icon" aria-label="" routerLink="">
-      <mat-icon>extension</mat-icon>
-    </button>
-    <span>Proto</span>
+    <a routerLink="" class="nav-link logo">
+      <img src="assets/images/megalis_logo.png" title="Accueil" alt="Accueil" class="ng-star-inserted">
+    </a>
+    <span>Prototype</span>
     <span class="beta">beta</span>
     <span class="toolbar-spacer"></span>
     <button mat-icon-button class="example-icon person-icon" aria-label="">
