--- a/web-app/src/app/components/dashboard.component.html
+++ b/web-app/src/app/components/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="content">
-    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="16px grid">
-      <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let card of items">
-        <mat-card class="mat-elevation-z4" >
+    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="16px grid">
+      <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" *ngFor="let card of items">
+        <mat-card class="mat-elevation-z4">
           <mat-card-header>
             <mat-card-title>{{card.title}}</mat-card-title>
           </mat-card-header>
