--- a/web-app/src/app/components/dialog-infos.html
+++ b/web-app/src/app/components/dialog-infos.html
@@ -1,5 +1,5 @@
-<h1 mat-dialog-title>Informations</h1>
-<div mat-dialog-content>
+<h1 mat-dialog-title>{{data.title}}</h1>
+<div mat-dialog-content *ngIf="data.dialogId == 'infos'">
   Version utilisée de Pastell:
   <ul>
     <li>
@@ -8,7 +8,14 @@
     <li>
       preprod
     </li>
+    <li>code <a href="{{data.repository}}" target="_blank">source</a> de l'application</li>
   </ul>
+</div>
+<div mat-dialog-content *ngIf="data.dialogId == 'user'">
+
+    <p><mat-icon>account_circle</mat-icon>{{data.user}}</p>
+    <p><mat-icon>home</mat-icon>{{data.organisme}}</p>
+
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Fermer</button>
