--- a/web-app/src/app/components/navbar.component.html
+++ b/web-app/src/app/components/navbar.component.html
@@ -5,7 +5,7 @@
     <span>Prototype</span>
     <span class="beta">beta</span>
     <span class="toolbar-spacer"></span>
-    <button mat-icon-button class="example-icon person-icon" aria-label="">
+    <button mat-icon-button class="example-icon person-icon" aria-label="" (click)="openUserDialog()">
       <mat-icon>person</mat-icon>
     </button>
     <span>{{user}}</span>
