--- a/web-app/src/app/components/no-tdt-form.component.css
+++ b/web-app/src/app/components/no-tdt-form.component.css
@@ -25,6 +25,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-top: 20px;
   }
 
   .file-upload .material-icons.megalis {
@@ -82,6 +83,10 @@ h4 {
 
 .example-margin {
   padding: 10px;
+}
+
+button#apply-btn {
+  margin-left: 50px;
 }
 
 
